[package]
name = "color"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["color"]
description = "color rgba helper functions"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-color.git"
homepage = "https://github.com/nathanfaucett/rs-color"

[dependencies]
num = {git = "https://github.com/nathanfaucett/rs-num.git"}
vec4 = {git = "https://github.com/nathanfaucett/rs-vec4.git"}
concat_string = {git = "https://github.com/nathanfaucett/rs-concat_string.git"}
regex = {version = "0.2"}
lazy_static = {version = "0.2", features = ["spin_no_std"]}
